<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rubn.jediapp.fragments.CalculatorFragment">

    <LinearLayout
        android:id="@+id/layout_calc_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">
        <TextView
            android:id="@+id/calc_text_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/calc_result_text_size"
            android:text="@string/calc_0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_calc_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_calc_row_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_calc_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkgDark"
                android:text="@string/calc_c"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />

            <Button
                android:id="@+id/btn_calc_division"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkgDark"
                android:text="@string/calc_division"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_mult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkgDark"
                android:text="@string/calc_mult"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_erase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkgDark"
                android:text="@string/calc_erase"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_calc_row_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_calc_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_7"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_8"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_9"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/colorBtnBkgDark"
                android:text="@string/calc_minus"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_calc_row_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_calc_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_summ"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkgDark"
                android:text="@string/calc_summ"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:textStyle="bold"
                android:layout_weight="2" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_calc_row_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_calc_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:padding="@dimen/calc_padding_button"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:padding="@dimen/calc_padding_button"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:padding="@dimen/calc_padding_button"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_empty_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkgDark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:padding="@dimen/calc_padding_button"
                android:textStyle="bold"
                android:layout_weight="2" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_calc_row_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_calc_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:padding="@dimen/calc_padding_button"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:text="@string/calc_0"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:padding="@dimen/calc_padding_button"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_empty_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkg"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:padding="@dimen/calc_padding_button"
                android:textStyle="bold"
                android:layout_weight="2" />
            <Button
                android:id="@+id/btn_calc_equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBtnBkgDark"
                android:text="@string/calc_equal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/calc_text_size"
                android:padding="@dimen/calc_padding_button"
                android:textStyle="bold"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
