<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.rubn.jediapp.activities.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/login_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_text_name"
                android:gravity="center" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
        <EditText
            android:id="@+id/login_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_text_password"
            android:inputType="textPassword"
            android:gravity="center"
            />
        </android.support.design.widget.TextInputLayout>
        <info.hoang8f.widget.FButton
            android:id="@+id/login_button"
            android:layout_width="240dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button_login"
            android:layout_marginRight="@dimen/margin_button_login"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/log_in"
            android:minHeight="@dimen/minHeightLogin"
            fbutton:buttonColor="@color/fbutton_color_alizarin"
            fbutton:shadowColor="@color/fbutton_color_pomegranate"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"/>
        <info.hoang8f.widget.FButton
            android:id="@+id/register_button"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button_login"
            android:layout_marginRight="@dimen/margin_button_login"
            android:minHeight="@dimen/minHeightLogin"
            android:text="@string/register"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            fbutton:buttonColor="@color/fbutton_color_peter_river"
            fbutton:shadowColor="@color/fbutton_color_belize_hole"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp" />



</RelativeLayout>
