<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:theme="@style/RedAppTheme"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rubn.jediapp.activities.RegisterActivity"
    android:background="@color/colorBlackSoft">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fbutton_color_alizarin"
        android:elevation="@dimen/toolbar_elevation"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorWhite"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_fileName="AlBoarMan.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColorHint="@color/colorWhite">
            <EditText
                android:id="@+id/register_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_text_name"
                android:gravity="center"
                android:textColor="@color/colorWhite"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite">
            <EditText
                android:id="@+id/register_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_text_password"
                android:inputType="textPassword"
                android:gravity="center"
                android:textColor="@color/colorWhite"/>
        </android.support.design.widget.TextInputLayout>

        <info.hoang8f.widget.FButton
            android:id="@+id/register_button_register"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button_login"
            android:layout_marginRight="@dimen/margin_button_login"
            android:minHeight="@dimen/minHeightLogin"
            android:text="@string/register"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            fbutton:buttonColor="@color/fbutton_color_alizarin"
            fbutton:shadowColor="@color/fbutton_color_pomegranate"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"/>
    </LinearLayout>

</RelativeLayout>
